--- a/marken-burger-mobile/src/app/home/home.page.scss
+++ b/marken-burger-mobile/src/app/home/home.page.scss
@@ -25,3 +25,58 @@
 #container a {
   text-decoration: none;
 }
+
+
+.home-bg-img{
+  position: absolute;
+  z-index:-1;
+  // height:400px;
+  background: black;
+  width: 100%;
+}
+
+.bg-tint{
+  z-index:-2;
+  // background: black;
+}
+
+.main-content{
+  padding:20px;
+  background: transparent;
+  margin-top:25px;
+  // border-radius: 10px;
+}
+
+.main-content-title{
+  font-family: Ubuntu !important;
+  font-weight: 1000;
+  font-size: 38px;
+  color: white;
+}
+
+.main-content-text{
+  font-family: Ubuntu !important;
+  font-size:20px;
+  color:white;
+  margin-top:5px;
+  font-weight: 900;
+  text-shadow: 0.5px 0.5px black;
+}
+
+.email-user-card{
+  background: #171717;
+  border-radius: 10px;
+  padding:25px;
+  color: white;
+  font-family: Ubuntu !important;
+  font-size: 22px;
+  margin:20px;
+
+}
+
+.email-input{
+  margin-top:15px;
+  background:white;
+  color:black;
+  border-radius:10px;
+}
