--- a/marken-burger-mobile/src/global.scss
+++ b/marken-burger-mobile/src/global.scss
@@ -24,3 +24,13 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+@font-face {
+    font-family: 'Courgette';
+    src: url('assets/fonts/Courgette-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('assets/fonts/Ubuntu-Light.ttf');
+}
