--- a/src/global.scss
+++ b/src/global.scss
@@ -35,11 +35,19 @@
     src: url('assets/fonts/Ubuntu-Light.ttf');
 }
 
+:root{
+    // green
+    --color-1: green;
+    --color-1-dark: rgb(0, 96, 0);
+    --color-1-light: rgb(114, 185, 114);
+    // blue
+    --color-2: #067bc2;
+}
+
 .form-default{
     height: 46px;
-    width: 95%;
-    // border: 2px solid blue;
-    // border-bottom: 3px solid red;
+    width: 100%;
+    padding: 10px;
     border-radius: 3px;
     background-color: rgb(214, 214, 214);
     border: none;
@@ -57,4 +65,34 @@
         font-weight: bold;
         color: red;
     }
+}
+
+.btn-default{
+    background-color: var(--color-1);
+    height: 45px;
+    width: 100%;
+    border-radius: 10px;
+    color: white;
+    font-size: medium;
+    margin: 10px;
+    text-align: center;
+}
+
+.btn-default:active{
+    background-color: var(--color-1-dark);
+}
+
+.btn-default:disabled{
+    background-color: var(--color-1-light);
+}
+
+.btn-clear{
+    background-color: transparent;
+    height: 45px;
+    width: 100%;
+    border-radius: 10px;
+    color: var(--color-2);
+    font-size: medium;
+    margin: 10px;
+    text-align: center;
 }
