--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item>
+          <ion-item [routerLink]="['/contact']">
             <ion-icon name="call" slot="start"></ion-icon>
             <span class="nav-title">Contact</span>
           </ion-item>
