--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -5,67 +5,79 @@
 </ion-header>
 
 <ion-content>
-  <div class="register">
-    <input
-    type="text"
-    class="form-default"
-    placeholder="email"
-    >
-
-    <input
-      type="text"
-      class="form-default"
-      placeholder="First Name"
-    >
-    <input
-      type="text"
-      class="form-default"
-      placeholder="Middle Name"
-    >
-    <input
-      type="text"
-      class="form-default"
-      placeholder="Last Name"
-    >
-
-    <input
-      type="text"
-      class="form-default"
-      placeholder="Birthdate"
-      (click)="setOpen(true)"
-    >
-
-    <input
-      type="text"
-      class="form-default"
-      placeholder="Password"
-    >
-    <input
-      type="text"
-      class="form-default"
-      placeholder="Confirm Password"
-    >
-    <button 
-      type="submit"
-      class="btn-default"
-    >
-      Register
-    </button>
-  </div>
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <div class="register">
+      <input
+        type="email"
+        class="form-default"
+        placeholder="Email"
+        formControlName="email"
+        value="{{registerInfo.email}}">
   
-  <ion-modal [isOpen]="isModalOpen" class="birthdate">
-    <ng-template>
-      <ion-content>
-        <div class="birthday-picker">
-          <ion-toolbar>
-            <ion-title>Modal</ion-title>
-            <ion-buttons slot="end">
-              <ion-button (click)="setOpen(false)">Close</ion-button>
-            </ion-buttons>
-          </ion-toolbar>
-          <ion-datetime presentation="date" [preferWheel]="true" size="cover"></ion-datetime>
-        </div>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+      <input
+        type="text"
+        class="form-default"
+        placeholder="First Name"
+        formControlName="firstName"
+      >
+      <input
+        type="text"
+        class="form-default"
+        placeholder="Middle Name"
+        formControlName="middleName"
+      >
+      <input
+        type="text"
+        class="form-default"
+        placeholder="Last Name"
+        formControlName="lastName"
+      >
+
+      <ion-input
+        type="text"
+        class="form-default"
+        placeholder="Birthdate"
+        value="{{registerInfo.birthday}}"
+        id="open-modal"
+        formControlName="birthdate"
+        style="--padding-start: 10px;"
+      ></ion-input>
+  
+      <ion-modal trigger="open-modal" class="birthdate">
+        <ng-template>
+          <ion-content>
+            <div class="birthday-picker">
+              <ion-datetime presentation="date"
+              [preferWheel]="true" size="cover" #datetime
+              [showDefaultButtons]="true"
+              (ionChange)="test(datetime.value)"
+              displayFormat="MMMM DD, YYYY" pickerFormat="MMMM D YYYY"
+              >
+              </ion-datetime>
+            </div>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
+
+      <input
+        type="text"
+        class="form-default"
+        formControlName="password"
+        placeholder="Password"
+      >
+      <input
+        type="text"
+        class="form-default"
+        placeholder="Confirm Password"
+        formControlName="confirmPass"
+      >
+      <button 
+        type="submit"
+        class="btn-default"
+      >
+        Register
+      </button>
+    </div>
+  </form>
+  
 </ion-content>
