--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -21,7 +21,7 @@
             border-top-right-radius: 10px;
             background-color: white;
             width: 100%;
-            height: 325px;
+            height: max-content;
 
             ion-datetime{
                 width: 100%;
