login+registration form redesign

--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="options">
-      <button type="button" class="btn-register" [routerLink]="['/home']">Register</button>
+      <button type="button" class="btn-register" [routerLink]="['/register']">Register</button>
       <button type="button" class="btn-login" [routerLink]="['/login']">Login</button>
     </div>
   </div>
