--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -20,6 +20,7 @@
 }
 
 .contact-form{
+    text-align:center;
     width: 90%;
     height: 350px;
     background: #171717;
@@ -41,6 +42,7 @@
     background-color: white;
     border-radius: 10px;
     width: 90%;
+    height: 40px;
     margin: auto;
     margin-top: 15px;
     font-size: 18px; 
@@ -61,3 +63,11 @@
     margin-top: 20px;
 }
 
+.form-err-msg{
+    color: red;
+    margin: 0;
+    text-align: left;
+    font-size: 16px;
+    margin-left: 15px;
+    margin-top: 2px;
+}
