--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -22,7 +22,7 @@
 .contact-form{
     text-align:center;
     width: 90%;
-    height: 350px;
+    height: auto;
     background: #171717;
     border-radius: 10px;
     padding: 10px;
