environment + api service setup + shop page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item>
+          <ion-item [routerLink]="['/shop']">
             <ion-icon name="fast-food" slot="start"></ion-icon>
             <span class="nav-title">Shop</span>
           </ion-item>
