--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -51,7 +51,7 @@
         </div>
         <input type="password" class="form-default" placeholder="Confirm Password" formControlName="password_confirmed">
         <p *ngIf="registerForm.errors?.mismatch" class="form-err-msg">Password does not match.</p>
-        <button type="submit" class="btn-default">
+        <button type="submit" class="btn-secondary">
           Register
         </button>
       </div>
