--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item>
+          <ion-item [routerLink]="['/about']">
             <ion-icon name="people" slot="start"></ion-icon>
             <span class="nav-title">About Us</span>
           </ion-item>
