--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-title>Contact Us</ion-title>
+      <ion-title>Contact</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -50,5 +50,22 @@
    </div>
   </div>
   </form>
+
+  <!--FAQ'S-->
+  <div class="freq-div">
+    <h2>Frequently Asked Questions</h2>
+    <h3>Q:How will I know that my order is arriving?</h3>
+    <h4>A: You can go to our 'Track' page located at our navigation bar to track your order. Furthermore, our riders would notify you through text. Click here to go to to tracking page</h4>
+    <h3>Q:Can i still cancel my order?</h3>
+    <h4>A: You can still cancel your order if it's in 'Queue' but it's being 'Made' or 'On-Delivery' you can't cancel it anymore. Go to 'Track' page to see your order status.</h4>
+    <h3>Q:Do I need to make an account to be able to order food?</h3>
+    <h4>A: No you can order as a guest but we still advice you make your own account when ordering to keep track of your orders and we can recommend you some burger builds that you will like.</h4>
+    <h3>Q:How can I give my feedback regarding a product or service?</h3>
+    <h4>A: After an item has been delivered to you, on the 'Track' page you will be able to give a feedback that our human resource would review.</h4>
+    <h3>Q:Do you have options for vegetarians?</h3>
+    <h4>A: Yes, we offer non-meat options for our vegetarian customers both on our preset selections and our burger builders.</h4>
+    <h3>Q:There is something that is not available on the menu, can I make a request?</h3>
+    <h4>A: You can send a message to us using our contact form above. We do not guarantee that your item requested would be added immediately.</h4>
+  </div>
 
 </ion-content>
