about + contact + login + register update

--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -118,6 +118,14 @@
     </div>
 
 
+    <div class="company-information">
+      <h2>Company Information</h2>
+      <h3><span>Company Address: </span>Penthouse 1, One Corporate Center Meralco Ave cor Julia Vargas Ave, Ortigas Center, Pasig, 1605 Metro Manila</h3>
+      <h3><span>Company Phone: </span>#245-8874</h3>
+      <h3><span>Email: </span>support@markenburgers.coms</h3>
+    </div>
+
+
   </div>
 
 </ion-content>
