--- a/src/app/about/about.page.scss
+++ b/src/app/about/about.page.scss
@@ -84,9 +84,41 @@
              ion-icon{
                 margin-bottom: 10px;
              }
-        
 
+}
 
+.company-information{
+    text-align:center;
+    align-items: center;
+    justify-items: center;
+    width: 90%;
+    height: auto;
+    background: #d8d8d8;
+    border-radius: 10px;
+    padding: 10px;
+    font-family: Ubuntu !important;
+    font-size: 22px;
+    margin: 0px auto;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, 
+                rgba(0, 0, 0, 0.07) 0px 2px 4px,
+                rgba(0, 0, 0, 0.07) 0px 4px 8px, 
+                rgba(0, 0, 0, 0.07) 0px 8px 16px, 
+                rgba(0, 0, 0, 0.07) 0px 16px 32px, 
+                rgba(0, 0, 0, 0.07) 0px 32px 64px;
 
+                h2{
+                    font-size: 27px;
+                    color: #228B22;
+                    font-weight: bold;
+                }
 
+                h3{
+                    font-size: 21px;
+
+                    span{
+                        font-weight: bold;
+                    }
+                }
 }
