--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -11,17 +11,19 @@
   <div class="content">
     <div class="header-bg">
       <img src="assets/img/company-header.jpg">
+      <h2>Get to Know more About our Company</h2>
     </div>
 
     <div class="company-content">
       <h2>Our Company</h2>
+      <img src="assets/img/store.jpg">
       <h3>Marken Burger was founded by Matheiu Perdido in 2010 that offers customers pre-made combo meals, or the user can create their own. The objective is to offer high-quality burgers at a lower cost and the goal is to compete using ghost or cloud kitchens and conducting all operations online. </h3>
     </div>
 
     <div class="company-founders">
       <h2>The Company Founding Members</h2>
 
-      <img src="assets/img/members/julian.jpg">
+      <img src="assets/img/members/member1.jpg">
       <h3>Danward Bautista</h3>
       <h4>Founder</h4>
       <ion-grid>
@@ -40,7 +42,7 @@
         </ion-row>
       </ion-grid>
 
-      <img src="assets/img/members/julian.jpg">
+      <img src="assets/img/members/member2.jpg">
       <h3>Ghobel De Jesus</h3>
       <h4>Founder</h4>
       <ion-grid>
@@ -59,7 +61,7 @@
         </ion-row>
       </ion-grid>
 
-      <img src="assets/img/members/julian.jpg">
+      <img src="assets/img/members/member3.jpg">
       <h3>Jericho Gesmundo</h3>
       <h4>Founder</h4>
       <ion-grid>
@@ -78,7 +80,7 @@
         </ion-row>
       </ion-grid>
 
-      <img src="assets/img/members/julian.jpg">
+      <img src="assets/img/members/member4.jpg">
       <h3>Matheiu Perdido</h3>
       <h4>Founder</h4>
       <ion-grid>
@@ -97,7 +99,7 @@
         </ion-row>
       </ion-grid>
 
-      <img src="assets/img/members/julian.jpg">
+      <img src="assets/img/members/member5.jpg">
       <h3>Julian Signo</h3>
       <h4>Founder</h4>
       <ion-grid>
