--- a/src/app/about/about.page.scss
+++ b/src/app/about/about.page.scss
@@ -1,10 +1,21 @@
 .header-bg{
+    z-index: -2;
 
     img{
         width: 100%;
         height: 250px;
         object-fit: cover;
+        position: absolute;
+        z-index: -1;
         margin-top: -20px;
+    }
+
+    h2{
+        font-weight: bold;
+        font-size: 40px;
+        text-align: center;
+        color: white;
+        padding-top: 50px;
     }
 }
 
@@ -20,7 +31,7 @@
     font-family: Ubuntu !important;
     font-size: 22px;
     margin: 0px auto;
-    margin-top: 50px;
+    margin-top: 100px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, 
                 rgba(0, 0, 0, 0.07) 0px 2px 4px,
                 rgba(0, 0, 0, 0.07) 0px 4px 8px, 
@@ -30,13 +41,17 @@
 
                 h2{
                     font-size: 27px;
-                    color: #228B22;
+                    color: #2cb42c;
                     font-weight: bold;
                 }
 
                 h3{
                     font-size: 21px;
                     color: white;
+                }
+
+                img{
+                    width: 100%;
                 }
 
 }
@@ -63,7 +78,7 @@
 
                 h2{
                     font-size: 27px;
-                    color: #228B22;
+                    color: #2cb42c;
                     font-weight: bold;
                 }
 
@@ -71,6 +86,8 @@
                     border-radius: 50%;
                     margin-top: 30px;
                     border: 5px solid #171717;
+                    width: 50%;
+                    height: 50%;
                 }
 
                 h3{
@@ -110,7 +127,7 @@
 
                 h2{
                     font-size: 27px;
-                    color: #228B22;
+                    color: #2cb42c;
                     font-weight: bold;
                 }
 
@@ -121,4 +138,5 @@
                         font-weight: bold;
                     }
                 }
+
 }
