--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -24,6 +24,7 @@
     width: 90%;
     height: auto;
     background: #171717;
+    color: white;
     border-radius: 10px;
     padding: 10px;
     font-family: Ubuntu !important;
@@ -36,7 +37,27 @@
                 rgba(0, 0, 0, 0.07) 0px 8px 16px, 
                 rgba(0, 0, 0, 0.07) 0px 16px 32px, 
                 rgba(0, 0, 0, 0.07) 0px 32px 64px;
+
+                .title-contact{
+                    color: #2cb42c;
+                    font-size: 27px;
+                    font-weight: bold;
+                }
+
+                ion-icon{
+                    color: #2cb42c;
+                    font-size: 32px;
+                    font-weight: bold;
+                }
+
+                .form-sub{
+                    font-size: 18px;
+                    text-align: left;
+                    margin-left: 20px;
+                    margin-bottom: -15px;
+                }
 }
+
 
 .name-input, .email-input{
     background-color: white;
@@ -85,6 +106,7 @@
     font-size: 22px;
     margin: 0px auto;
     margin-top: 100px;
+    margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, 
                 rgba(0, 0, 0, 0.07) 0px 2px 4px,
                 rgba(0, 0, 0, 0.07) 0px 4px 8px, 
@@ -94,6 +116,8 @@
 
                 h2{
                     font-size: 27px;
+                    color: #2cb42c;
+                    font-weight: bold;
                 }
 
 
