--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <ion-title>About Us</ion-title>
+      <ion-title class="title-header">About Us</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
