--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -80,3 +80,36 @@
   color:black;
   border-radius:10px;
 }
+
+.title-product{
+  margin-left: 10px;
+  font-family: 25px;
+}
+
+.products-card{
+  background: #171717;
+  width: 260px;
+
+  img{
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+  }
+
+  .card-name{
+    font-size: 20px;
+    color: #FFBF00;
+  }
+
+  .card-price{
+    font-size: 20px;
+    color: white;
+  }
+
+  .custom-button{
+    border-radius:7px;
+    --background: #2cb42c;
+  }
+
+
+}
